@@ -19,7 +19,7 @@
 
 	<link rel="stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main.css" type="text/css"/>
 	<link rel="stylesheet" href="http://docs.typo3.org/css/t3_to_be_integrated.css" type="text/css"/>
-	<link rel="stylesheet" href="../../_static/pygments.css" type="text/css"/>
+	<!--link rel="stylesheet" href="../../_static/pygments.css" type="text/css"/-->
 	<link rel="stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main_alt_1.css" type="text/css"/>
 
 	<script src="http://docs.typo3.org/t3extras/js/css_browser_selector.js"></script>
